trying to fix visualization on mobile

--- a/sass/core/_responsive.scss
+++ b/sass/core/_responsive.scss
@@ -1,3 +1,9 @@
+html, body {
+   width: 100%;
+   overflow-x: hidden;
+ }
+
+
 /*
 Max Width, 960px
 Media Queries for Tablets
